--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li><hr>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li><hr>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li><hr>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -339,10 +339,10 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Talk to Us</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>WyteBirds is a company which builds & develops, static & dynamic websites based on the customer requirements. WyteBirds - IT Solutions is a better solution for your better business.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Talk to US</a>
+            <a class="cta-btn align-middle" href="#">Connect</a>
           </div>
         </div>
 
@@ -478,12 +478,12 @@
               <div class="member-info">
                 <a href="https://sreeharipdsy.com">Sreehari S</a>
                 <span>Founder & CEO</span>
-                <p>And Frontend Web Developer at WyteBirds</p>
+                <p style=" font-family: Jost, sans-serif;">Web Developer at WyteBirds</p>
                 <div class="social">
-                  <a href=""><i class="fab fa-linkedin"></i></a>
-                  <a href=""><i class="fas fa-envelope"></i></a>
-                  <a href=""><i class="fab fa-instagram-square"></i></a>
-                  <a href=""><i class="fab fa-telegram"></i></a>
+                  <a href="https://www.linkedin.com/in/sreehari-s-608023218/"><i class="fab fa-linkedin"></i></a>
+                  <a href="mailto: sreehari.pdsy@gmail.com"><i class="fas fa-envelope"></i></a>
+                  <a href="https://www.instagram.com/sreehari.pdsy/?utm_medium=copy_link"><i class="fab fa-instagram-square"></i></a>
+                  <a href="https://t.me/sreehari_pdsy"><i class="fab fa-telegram"></i></a>
                 </div>
               </div>
             </div>
@@ -702,7 +702,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3><span style="color: #FF6A00; font-weight: bold;"> Wyte</span><span style="color: #002A62; font-weight: bold;">Birds</span></h3>
             <p>
-              Palakkad 678623<br>
+              Palakkad 678623 <br>
               Kerala, India <br>
               <strong>Phone:</strong> +91 8075552463<br>
               <strong>Email:</strong> wytebirds@gmail.com<br>
