--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
           <div class="col-lg-4 col-md-6 col-12 d-flex align-items-stretch mt-lg-0" data-aos="zoom-in"  style="padding-top: 25px;">
             <div class="icon-box">
               <img src="https://img.icons8.com/external-outline-juicy-fish/60/000000/external-website-digital-nomad-outline-outline-juicy-fish.png" class="col-3"><br><br>
-              <h4><a href="">Website Hosting</a></h4>
-              <p>Website maintenance is the process of checking to see whether your website is healthy and performing well. It's about making sure your website visitors are happy.</p>
+              <h4><a href="">Website Maintenance</a></h4>
+              <p>Website maintenance refers to the tasks required to keep your website functioning properly and up to date. It involves regularly checking your website for issues, correcting any issues, and making updates.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12 d-flex align-items-stretch mt-md-0" data-aos="zoom-in" style="padding-top: 25px;">
@@ -324,23 +324,6 @@
 
       </div>
     </section>--><!-- End Why Us Section -->
-
-    <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-9 text-center text-lg-start">
-            <h3>Talk to Us!</h3>
-            <p>WyteBirds is a company which builds & develops, static & dynamic websites based on the customer requirements. WyteBirds - IT Solutions is a better solution for your better business.</p>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#contact">Connect</a>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Cta Section -->
 
     <!-- ======= Portfolio Section =======
     <section id="portfolio" class="portfolio">
@@ -455,6 +438,7 @@
       </div>
     </section> --><!-- End Portfolio Section -->
 
+    
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container" data-aos="fade-up">
@@ -485,6 +469,23 @@
 
       </div>
     </section><!-- End Team Section -->
+
+    <!-- ======= Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-9 text-center text-lg-start">
+            <h3>Talk to Us!</h3>
+            <p>WyteBirds is a company which builds & develops, static & dynamic websites based on the customer requirements. WyteBirds - IT Solutions is a better solution for your better business.</p>
+          </div>
+          <div class="col-lg-3 cta-btn-container text-center">
+            <a class="cta-btn align-middle" href="#contact">Connect</a>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
 
     <!-- ======= Pricing Section =======
     <section id="pricing" class="pricing">
@@ -724,8 +725,8 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Privacy policy</a></li>
@@ -735,17 +736,27 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Maintanence</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">24*7 Technical Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Web Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Web Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Website Maintanence</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">Website Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#services">24*7 Technical Support</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Social Networks</h4>
+            <div>
+              <ul>
+                <li><i class="bx bx-chevron-right"></i> <a href="#services">Whatsapp</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#services">Email</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#services">Instagram</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#services">Telegram</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="#services">linkedin</a></li>
+              </ul>
+            </div>
             <div class="social-links mt-3"> 
+              <a href="https://wa.me/+918075552463" class="fab fa-whatsapp socialmedia"></a>   
               <a href="mailto: wytebirds@gmail.com" class="email"><i class="fas fa-envelope"></i></a>
               <a href="https://instagram.com/wytebirds?utm_medium=copy_link" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://t.me/wytebirds" class="google-plus"><i class="bx bxl-telegram"></i></a>
