--- a/index.html
+++ b/index.html
@@ -748,11 +748,11 @@
             <h4>Our Social Networks</h4>
             <div>
               <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="#services">Whatsapp</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#services">Email</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#services">Instagram</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#services">Telegram</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="#services">linkedin</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="https://wa.me/+918075552463">Whatsapp</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="mailto: wytebirds@gmail.com">Email</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="https://instagram.com/wytebirds?utm_medium=copy_link">Instagram</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="https://t.me/wytebirds">Telegram</a></li>
+                <li><i class="bx bx-chevron-right"></i> <a href="https://www.linkedin.com/company/wytebirds-it-solutions">linkedin</a></li>
               </ul>
             </div>
             <div class="social-links mt-3"> 
