--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li><hr>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li><hr>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li><hr>
+          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
