--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="icon-box">
               <img src="https://img.icons8.com/external-flatart-icons-solid-flatarticons/64/000000/external-portfolio-ux-and-ui-flatart-icons-solid-flatarticons.png" class="col-3"><br><br>
               <h4><a href="">Portfolio Websites</a></h4>
-              <p>A portfolio website provides professional information about an individual or a company and presents a showcase of their work. To supply site visitors with information about the individual or company to showcase work.</p>
+              <p>A portfolio website provides professional information about an individual or a company and presents a showcase of their work.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12 d-flex align-items-stretch mt-md-0" data-aos="zoom-in"  style="padding-top: 25px;">
@@ -477,7 +477,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-start">
             <h3>Talk to Us!</h3>
-            <p>WyteBirds is a company which builds & develops, static & dynamic websites based on the customer requirements. WyteBirds - IT Solutions is a better solution for your better business.</p>
+            <p>WyteBirds is a company which builds & develops, static & dynamic websites based on customer requirements. WyteBirds - IT Solutions is a better solution for your better business.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#contact">Connect</a>
