--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="icon-box">
               <img src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/000000/external-blog-digital-marketing-flatart-icons-outline-flatarticons-1.png" class="col-3"><br><br>
               <h4><a href="">Blog Sites</a></h4>
-              <p>A blog is a discussion or informational website published which consisting of discrete, often informal diary-style posts. Posts are typically displayed in reverse chronological order, so the most recent post appears first.</p>
+              <p>A blog is a discussion or informational website which consists of discrete, often informal diary-style posts. Posts are typically displayed in reverse chronological order, so the most recent post appears first.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-12 d-flex align-items-stretch mt-lg-0" data-aos="zoom-in"  style="padding-top: 25px;">
